# strife_engine

./: .env  Cargo.toml
resources/shaders/: shader.wgsl
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/event_system/: mod.rs
src/application/layers/: mod.rs
src/core/: mod.rs
src/core/sf_events/: event.rs  key_events.rs  mod.rs  mouse_buttons_events.rs  mouse_events.rs  window_events.rs
src/core/sf_graphics/: mod.rs
src/core/sf_graphics/wgpu_backend/: mod.rs
src/core/sf_graphics/world_graphics/: mod.rs
src/core/sf_gui/: gui_widgets.rs  mod.rs
src/core/sf_layers/: mod.rs
src/core/world/: mod.rs
src/sf_log/: mod.rs
src/sf_window/: mod.rs
