[package]
name = "strife"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger="0.11"
pollster="0.4"
fern={version= "0.7.1", features = ["colored"]}
humantime="2.2.0"
log="0.4.27"
colored="3.0.0"
egui = "0.32.0"
egui-winit = "0.32.0"
egui-wgpu = "0.32.0"
winit = { version = "*", features = ["rwh_05"] }
wgpu ={ version ="25.0.*", features = ["webgpu", "webgl"]}
bytemuck="1.23.1"
